[gd_scene load_steps=21 format=3 uid="uid://o8cqhdlqjtwk"]

[ext_resource type="Script" path="res://Rides/pickup_dropoff.gd" id="1_t8mna"]
[ext_resource type="Texture2D" uid="uid://b80i8diekk6ar" path="res://Pedestrians/Pedestrian.png" id="2_01f7s"]
[ext_resource type="Script" path="res://Rides/CustomerBody.gd" id="3_tkq0k"]
[ext_resource type="Texture2D" uid="uid://c0gjh2j3oq26e" path="res://Rides/Pickup.png" id="4_g170r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh63o"]
size = Vector2(20, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_54gy0"]
atlas = ExtResource("2_01f7s")
region = Rect2(0, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcvdy"]
atlas = ExtResource("2_01f7s")
region = Rect2(9, 0, 9, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jucy"]
atlas = ExtResource("2_01f7s")
region = Rect2(18, 0, 9, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_mkjt3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54gy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcvdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jucy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcvdy")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bsgng"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_csafk"]
atlas = ExtResource("4_g170r")
region = Rect2(0, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gem6"]
atlas = ExtResource("4_g170r")
region = Rect2(40, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_fom4l"]
atlas = ExtResource("4_g170r")
region = Rect2(80, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpppu"]
atlas = ExtResource("4_g170r")
region = Rect2(120, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsxv8"]
atlas = ExtResource("4_g170r")
region = Rect2(160, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_14xfx"]
atlas = ExtResource("4_g170r")
region = Rect2(200, 0, 40, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qpfr"]
atlas = ExtResource("4_g170r")
region = Rect2(240, 0, 40, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_25ybo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_csafk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gem6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fom4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpppu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsxv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14xfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qpfr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_6vnu2"]
resource_name = "pulse"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tk2q4"]
_data = {
"pulse": SubResource("Animation_6vnu2")
}

[node name="PickupDropoff" type="Node2D"]
script = ExtResource("1_t8mna")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_sh63o")

[node name="CustomerBody" type="CharacterBody2D" parent="."]
position = Vector2(0, -18)
script = ExtResource("3_tkq0k")

[node name="CustomerSprite" type="AnimatedSprite2D" parent="CustomerBody"]
sprite_frames = SubResource("SpriteFrames_mkjt3")
frame = 1

[node name="TaxiEnterArea" type="Area2D" parent="CustomerBody"]
position = Vector2(0, 3)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CustomerBody/TaxiEnterArea"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_bsgng")
debug_color = Color(0.92549, 0, 0.682353, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.01706, 1.01706)
sprite_frames = SubResource("SpriteFrames_25ybo")
autoplay = "default"
frame_progress = 0.337136

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_tk2q4")
}
autoplay = "pulse"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="reached_taxi" from="CustomerBody" to="." method="_on_customer_body_reached_taxi"]
[connection signal="area_entered" from="CustomerBody/TaxiEnterArea" to="CustomerBody" method="_on_taxi_enter_area_area_entered"]
